# hse-lms-harvest

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
src/hse_lms_harvest/: __init__.py  auth.py  capture.py  classify.py  cleanup.py  cli.py  cli_args.py  course.py  credentials.py  debug.py  downloads.py  file_cache.py  manifest.py  model.py  page_cache.py  privacy.py  render.py  sizes.py  text.py
tests/: test_capture.py  test_classify.py  test_cleanup.py  test_cli.py  test_debug.py  test_downloads.py  test_file_cache.py  test_manifest.py  test_page_cache.py  test_privacy.py  test_render.py  test_text.py
