[project]
name = "hse-lms-harvest"
version = "0.1.0"
description = "Local browser harvester for HSE Smart LMS course pages and attachments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.55.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0,<9.0.0",
  "ruff>=0.14.0,<0.15.0",
]

[project.scripts]
hse-lms-harvest = "hse_lms_harvest.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hse_lms_harvest"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
